# aws-lambda-play

./: ChangeLog.md  README.md  aws-lambda-play.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
