cabal-version: 3.0


name:           aws-lambda-play
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/aws-lambda-play#readme>
homepage:       https://github.com/githubuser/aws-lambda-play#readme
bug-reports:    https://github.com/githubuser/aws-lambda-play/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/aws-lambda-play

library
  exposed-modules:
      Lib
  other-modules:
      Paths_aws_lambda_play
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable aws-lambda-play-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_play
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-play
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite aws-lambda-play-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_aws_lambda_play
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-play
    , base >=4.7 && <5
  default-language: Haskell2010
