cabal-version:      3.0
name:               aws-lambda-play
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/aws-lambda-play#readme
bug-reports:        https://github.com/githubuser/aws-lambda-play/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/aws-lambda-play#readme>

build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/githubuser/aws-lambda-play

library
    exposed-modules:  Lib
    hs-source-dirs:   src
    other-modules:    Paths_aws_lambda_play
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        aws-lambda-haskell-runtime >=3.0.0,
        aeson -any

executable bootstrap
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_aws_lambda_play
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -O2 -static -with-rtsopts=-N
    cc-options:       -static
    ld-options:       -static -pthread
    build-depends:
        aws-lambda-play -any,
        aws-lambda-haskell-runtime >=3.0.0,
        base >=4.7 && <5

test-suite aws-lambda-play-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Paths_aws_lambda_play
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        aws-lambda-play -any,
        base >=4.7 && <5
